--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.2.11",
     "hexo-renderer-stylus": "^0.2.3",
-    "hexo-server": "^0.2.2"
+    "hexo-server": "^0.2.2",
+    "hexo-wordcount": "^3.0.2"
   }
 }
