添加了4篇文章

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 title: 青梅煮酒
 subtitle: 事未经历不知难
 description: 任何人答应你的事都不算数，只有自己能做主的才算。
-keywords: 李富泉,web开发者,博客,开发,编程
-author: 李先生怕生
+keywords: 李怀瑾,web开发者,博客,开发,编程
+author: 李怀瑾
 language: zh-Hans
 timezone: Asia/Shanghai
 
