--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 青梅煮酒
 subtitle: 事未经历不知难
-description: 任何人答应你的事都不算数，只有自己能做主的才算。
+description: 三人行，必有我师焉，择其善者而从之，其不善者而改之。
 keywords: 李怀瑾,web开发者,博客,开发,编程
 author: 李怀瑾
 language: zh-Hans
@@ -77,7 +77,7 @@ theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-deploy:
-  type: git
-  repository: git@github.com:fuquanli/Blog.github.io.git
-  branch: master
+#deploy:
+  #type: git
+  #repository: git@github.com:fuquanli/Blog.github.io.git
+  #branch: master
