--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -243,9 +243,9 @@ post_wordcount:
   #description: ex. subscribe to my blog by scanning my public wechat account
 
 # Reward
-reward_comment: 坚持原创技术分享，您的支持将鼓励我继续创作！
-wechatpay: /images/wechat_reward.jpg
-alipay: /images/alipay_reward.jpg
+#reward_comment: 坚持原创技术分享，您的支持将鼓励我继续创作！
+#wechatpay: /images/wechat_reward.jpg
+#alipay: /images/alipay_reward.jpg
 #bitcoin: /images/bitcoin.png
 
 # Declare license on posts
