--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "hexo": "^3.9.0",
-    "hexo-deployer-git": "^0.3.1",
+    "hexo-deployer-git": "^2.1.0",
     "hexo-deployer-heroku": "^0.1.2",
     "hexo-deployer-openshift": "^0.1.2",
     "hexo-deployer-rsync": "^0.1.3",
@@ -15,11 +15,12 @@
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
-    "hexo-generator-sitemap": "^1.2.0",
+    "hexo-generator-searchdb": "^1.2.0",
+    "hexo-generator-sitemap": "^2.0.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.0",
-    "hexo-renderer-marked": "^0.2.11",
-    "hexo-renderer-stylus": "^0.2.3",
+    "hexo-renderer-marked": "^2.0.0",
+    "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^0.2.2",
     "hexo-wordcount": "^3.0.2"
   }
