--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: 结硬寨，打呆仗
 description: 三人行，必有我师焉，择其善者而从之，其不善者而改之。
 keywords: 李怀瑾,web开发者,博客,开发,编程
 author: 李怀瑾
-language: zh-CN
+language: en
 timezone: Asia/Shanghai
 
 # URL
