--- a/themes/hexo-theme-next/_config.yml
+++ b/themes/hexo-theme-next/_config.yml
@@ -467,7 +467,7 @@ google_site_verification: EnOsXrbyhWDqLLa4Yz1DxNRCg0RsnXRFVVa8JuJRqYQ
 
 # Bing Webmaster tools verification.
 # See: https://www.bing.com/webmaster
-bing_site_verification: baidu-site-verification
+bing_site_verification: FBFAE67AAC33916F6C9C15F7A9CE43D7 
 
 # Yandex Webmaster tools verification.
 # See: https://webmaster.yandex.ru
