--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 # Site
 title: 青梅煮酒
-subtitle: 结硬寨，打呆仗
-description: 三人行，必有我师焉，择其善者而从之，其不善者而改之。
-keywords: 李富泉,web开发者,博客,开发,编程
-author: 李富泉
+subtitle: 实事求是
+description: 实事求是。理论联系实际，认真调查研究问题。
+keywords: 李怀瑾,web开发者,博客,开发,编程
+author: 李怀瑾
 language: en
 timezone: Asia/Shanghai
 
