--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "7.0.0-rc2"
+    "version": "7.0.0"
   },
   "dependencies": {
-    "hexo": "^7.0.0-rc2",
+    "hexo": "^7.0.0",
     "hexo-cli": "^4.3.1",
     "hexo-deployer-git": "^4.0.0",
-    "hexo-deployer-heroku": "^0.1.2",
-    "hexo-deployer-openshift": "^0.1.2",
+    "hexo-deployer-heroku": "^1.0.0",
     "hexo-deployer-rsync": "^2.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
@@ -22,7 +21,7 @@
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.1.0",
     "hexo-renderer-stylus": "^3.0.0",
-    "hexo-renderer-swig": "^2.0.0",
+    "hexo-renderer-swig": "^1.1.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-next": "^5.1.4",
     "hexo-wordcount": "^6.0.1"
